--- a/index.css
+++ b/index.css
@@ -19,14 +19,7 @@ h2 {
     font-weight: 400;
 }
 
-
-/* ====layout====== */
-
-.header,
-.profile {
-    max-width: 534px;
-    margin: 0 auto;
-}
+/* =====Header list======= */
 
 header ul li {
     list-style-type: none;
@@ -44,6 +37,15 @@ li img {
     width: 34px;
 }
 
+
+/* ====layout====== */
+
+.header,
+.profile {
+    max-width: 534px;
+    margin: 0 auto;
+}
+
 .logo {
     width: 84px;
 }
@@ -56,6 +58,7 @@ li img {
     max-height: 800px;
     margin: 1.535em auto;
     position: relative;
+    border: 2px solid red;
 }
 
 .avatar {
@@ -112,13 +115,15 @@ button {
 }
 
 /* ===badges==== */
-
 .like-badge,
 .nope-badge {
-    position: absolute;
-    top: 20%;
-    left: 20%;
-    width: 234px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 150px auto auto;
+    max-width: 234px;
     transform: rotate(-30deg);
 }
 
